Refactor proto definitions
